force-app/main/default/objects/Submission__c/Submission__c.object-meta.xml
<CustomObject>
    <label>Submission</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>