force-app/main/default/objects/Submission__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>