force-app/main/default/objects/Submission__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Submissions (Student)</relationshipLabel>
    <relationshipName>Submissions1</relationshipName>
    <type>Lookup</type>
</CustomField>