force-app/main/default/objects/Submission__c/fields/SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>