force-app/main/default/objects/Submission__c/validationRules/Submission_Date_NotBefore_AssignmentCrea.validationRule-meta.xml
<ValidationRule>
    <fullName>Submission_Date_NotBefore_AssignmentCrea</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Submission_Date__c)),
  Submission_Date__c &lt; Assignment__r.CreatedDate
)</errorConditionFormula>
    <errorDisplayField>Submission_Date__c</errorDisplayField>
    <errorMessage>Submission date cannot be before the assignment was created.</errorMessage>
</ValidationRule>